--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+authorization:
+  jwt:
+    secret: AsteroidSecretKeyToGenJWTs
+    expires: 1800000
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:13306/geek_service
